# brick-snake

./: .gitignore  LICENSE  README.md  snake.cabal
src/: Main.hs  Snake.hs  UI.hs
