name:                snake
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rampion/snake#readme
license:             BSD3
license-file:        LICENSE
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
copyright:           PublicDomain
category:            executable
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable snake
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
